# gltk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: build.yml  cmake.yml
assets/: box.frag  box.vert  color.frag  image.frag  text.frag  text.vert
assets/shaders/: color.frag  image.frag
simple_slide_src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  animation.cpp  animation.h  box.cpp  box.h  canvas.cpp  canvas.h  color.cpp  color.h  components.h  events.h  fontloader.cpp  fontloader.h  gltk.cpp  gltk.h  image.cpp  image.h  layout.cpp  layout.h  layout_builder.cpp  layout_builder.h  list_resolvers.cpp  list_resolvers.h  messure.cpp  messure.h  node.cpp  node.h  render.cpp  render.h  render_objects.cpp  render_objects.h  renderable.h  shader.cpp  shader.h  style.cpp  style.h  text.cpp  text.h  vec_math.cpp  vec_math.h  (+2 more)
src/components/: basic_text.cpp  basic_text.h  button.cpp  button.h  drop_down.cpp  drop_down.h  edit_text.cpp  edit_text.h  numeric_input.cpp  numeric_input.h  slider.cpp  slider.h  toggle.cpp  toggle.h
src/layout/: relative_scene.cpp  relative_scene.h  resolved_scene.cpp  resolved_scene.h  scene.cpp  scene.h  scene_resolver.cpp  scene_resolver.h  tree.h
src/renderables/: box.cpp  box.h  canvas.cpp  canvas.h  image.cpp  image.h  renderable.h  text.cpp  text.h
src/text/: fonts.cpp  fonts.h  string_to_number.h  typesetter.cpp  typesetter.h
test/: CMakeLists.txt  gltk_test.cpp  layout_test.cpp  scene_resolver_test.cpp  tree_test.cpp  vec_math_test.cpp  window_test.cpp
test_app/: CMakeLists.txt  main.cpp  styleSheet.h
